--- a/environment.yml
+++ b/environment.yml
@@ -4,38 +4,19 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - asn1crypto=0.24.0=py37_0
-  - backcall=0.1.0=py37_0
   - blas=1.0=mkl
-  - bzip2=1.0.8=h7b6447c_0
   - ca-certificates=2019.5.15=1
   - certifi=2019.6.16=py37_1
   - cffi=1.12.3=py37h2e261b9_0
-  - chardet=3.0.4=py37_1
-  - conda=4.7.11=py37_0
-  - conda-package-handling=1.3.11=py37_0
-  - cryptography=2.7=py37h1ba5d50_0
   - cudatoolkit=10.0.130=0
-  - cython=0.29.12=py37he6710b0_0
-  - decorator=4.4.0=py37_1
-  - idna=2.8=py37_0
   - intel-openmp=2019.4=243
-  - ipython=7.7.0=py37h39e3cac_0
-  - ipython_genutils=0.2.0=py37_0
-  - jedi=0.13.3=py37_0
-  - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libxml2=2.9.9=hea5a465_1
-  - lz4-c=1.8.1.2=h14c3975_0
-  - lzo=2.10=h49e0be7_2
-  - magma-cuda100=2.5.1=1
   - mkl=2019.4=243
-  - mkl-include=2019.4=243
-  - mkl-service=2.0.2=py37h7b6447c_0
+  - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.14=py37ha843d7b_0
   - mkl_random=1.0.2=py37hd81dba3_0
   - ncurses=6.1=he6710b0_1
@@ -43,66 +24,69 @@ dependencies:
   - numpy=1.16.4=py37h7e9f1db_0
   - numpy-base=1.16.4=py37hde5b4d6_0
   - openssl=1.1.1c=h7b6447c_1
-  - pandas=0.25.0=py37he6710b0_0
-  - parso=0.5.0=py_0
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=py37_0
-  - pip=19.1.1=py37_0
-  - prompt_toolkit=2.0.9=py37_0
-  - ptyprocess=0.6.0=py37_0
-  - pycosat=0.6.3=py37h14c3975_0
+  - pip=19.2.2=py37_0
   - pycparser=2.19=py37_0
-  - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py37_0
-  - pysocks=1.7.0=py37_0
   - python=3.7.4=h265db76_1
-  - python-dateutil=2.8.0=py37_0
-  - python-libarchive-c=2.8=py37_11
   - pytorch=1.2.0=py3.7_cuda10.0.130_cudnn7.6.2_0
-  - pytz=2019.2=py_0
-  - pyyaml=5.1.1=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
-  - requests=2.22.0=py37_0
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - scipy=1.3.0=py37h7c811a0_0
   - setuptools=41.0.1=py37_0
   - six=1.12.0=py37_0
   - sqlite=3.29.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
-  - tqdm=4.32.1=py_0
-  - traitlets=4.3.2=py37_0
-  - typing=3.6.4=py37_0
-  - urllib3=1.24.2=py37_0
-  - wcwidth=0.1.7=py37_0
   - wheel=0.33.4=py37_0
   - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
   - pip:
+    - absl-py==0.8.0
+    - astor==0.8.0
     - atomicwrites==1.3.0
     - attrs==19.1.0
+    - chardet==3.0.4
     - click==7.0
-    - cloudpickle==1.2.1
+    - cloudpickle==1.2.2
     - colorama==0.4.1
     - filelock==3.0.12
     - funcsigs==1.0.2
     - future==0.17.1
+    - gast==0.3.1
+    - google-pasta==0.1.7
+    - grpcio==1.23.0
     - gym==0.14.0
-    - importlib-metadata==0.19
+    - h5py==2.10.0
+    - idna==2.8
+    - importlib-metadata==0.21
+    - jsonschema==3.0.2
+    - keras-applications==1.0.8
+    - keras-preprocessing==1.1.0
+    - markdown==3.1.1
     - more-itertools==7.2.0
-    - opencv-python==4.1.0.25
+    - opencv-python==4.1.1.26
     - packaging==19.1
     - pluggy==0.12.0
     - protobuf==3.9.1
     - psutil==5.6.3
     - py==1.8.0
+    - py-spy==0.1.11
     - pyglet==1.3.2
     - pyparsing==2.4.2
-    - pytest==5.1.0
-    - ray==0.7.3
-    - redis==3.3.7
+    - pyrsistent==0.15.4
+    - pytest==5.1.2
+    - pyyaml==5.1.2
+    - ray==0.7.4
+    - redis==3.3.8
+    - requests==2.22.0
+    - scipy==1.3.1
+    - setproctitle==1.1.10
+    - tensorboard==1.14.0
     - tensorboardx==1.8
-    - zipp==0.5.2
+    - tensorflow==1.14.0
+    - tensorflow-estimator==1.14.0
+    - termcolor==1.1.0
+    - tqdm==4.35.0
+    - urllib3==1.25.3
+    - wcwidth==0.1.7
+    - werkzeug==0.15.6
+    - wrapt==1.11.2
+    - zipp==0.6.0
 prefix: /home/ethanbro/miniconda3/envs/ppo
 
